2010-07-23  Xavier Queralt  <xqueralt@gmail.com>

	reviewed by: Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/bouncers/multibouncer.py:
	We still need the old keycard classes to be allowed by the bouncer for
	backwards compatibility

2010-07-23  Xavier Queralt  <xqueralt@gmail.com>

	reviewed by: Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/misc/httpserver/httpserver.py:
	Warn about deprecated property 'issuer-class' but do not fail.

2010-07-23  Xavier Queralt  <xqueralt@gmail.com>

	patch by: Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/common/keycards.py:
	Same issue as in r8769, the constructor of the Keycard class was
	overwriting parametersset by the other constructor.

2010-07-23  Xavier Queralt  <xqueralt@gmail.com>

	patch by: Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/common/keycards.py:
	Reverse the order of constructors, because the credentials.Token
	constructors sets the token property and the Keycard constructor
	overwrites it with None.

2010-07-23  Xavier Queralt  <xqueralt@gmail.com>

	patch by: Zaheer Abbas Merali <zaheerabbas@merali.org>

	* flumotion/common/keycards.py:
	Keycard base class needs to be initialised first, otherwise
	username gets overwritten.

2010-07-23  Xavier Queralt  <xqueralt@gmail.com>

	patch by: Zaheer Abbas Merali <zaheerabbas@merali.org>

	* flumotion/common/keycards.py:
	* flumotion/component/base/http.py:
	* flumotion/component/bouncers/multibouncer.py:
	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/misc/httpserver/httpserver.py:
	* flumotion/component/misc/httpserver/httpserver.xml:
	* flumotion/test/test_bouncers_ipbouncer.py:
	* flumotion/test/test_http.py:
	* flumotion/test/test_keycards.py:
	* flumotion/test/test_pb.py:
	* flumotion/twisted/pb.py: